--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - images/quran/
+    - assets/images/quran/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
