--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  shared_preferences: ^0.5.3+4
+  shared_preferences: ^0.5.7+2
   meta: ^1.1.8
 
-  bloc: ^3.0.0
-  flutter_bloc: ^3.1.0
-  hydrated_bloc: ^3.0.0
+#core
+  rxdart: 0.24.0
+  bloc: ^4.0.0
+  flutter_bloc: ^4.0.0
+  hydrated_bloc: ^4.0.0
   equatable: ^1.0.1
+
+  #UI
+  page_turn: 1.0.0
+
 
 dev_dependencies:
   flutter_test:
