--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 .flutter-plugins-dependencies
 .flutter-plugins-dependencies
+.flutter-plugins-dependencies
