--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   equatable: ^1.0.1
 
   wakelock: 0.1.4+1
-
+  sqflite: ^1.3.0+2
 
   #UI
   page_turn: 1.0.0
@@ -56,6 +56,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/quran/
+    - assets/quran-data/ayahinfo_1280.db
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
