--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: quran
+name: quran_reader
 description: A new Flutter application.
 
 # The following defines the version and build number for your application.
@@ -19,10 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
   shared_preferences: ^0.5.7+3
   meta: ^1.1.8
 
@@ -30,16 +32,19 @@ dependencies:
   rxdart: 0.24.1
   bloc: ^4.0.0
   flutter_bloc: ^4.0.0
-  hydrated_bloc: ^4.0.0
-  equatable: ^1.0.1
+  hydrated_bloc: ^4.1.1
+  equatable: ^1.2.0
 
   wakelock: 0.1.4+1
-  sqflite: ^1.3.0+2
+  sqflite: ^1.3.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.5
+  flutter_native_splash: ^0.1.9
+  flutter_rename_app: 1.0.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -54,7 +59,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/quran/
-    - assets/quran-data/ayahinfo_1280.db
+    - assets/quran-data/db/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -81,3 +86,29 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_intl:
+  enabled: true # Required. Must be set to true to activate the plugin. Default: false
+  class_name: S # Optional. Sets the name for the generated localization class. Default: S
+  main_locale: en # Optional. Sets the main locale used for generating localization files. Provided value should comply with ISO-639-1 and ISO-3166-1 (e.g. "en", "en_GB"). Default: en
+
+
+flutter_native_splash:
+  color: "96B85E"
+  android_disable_fullscreen: true
+  fill: false
+#flutter pub run flutter_native_splash:create
+
+flutter_icons:
+  image_path: 'assets/images/app/app_icon.png'
+  android: true
+  ios: true
+#flutter pub run flutter_launcher_icons:main
+
+flutter_rename_app:
+  application_name: Quran Reader
+  dart_package_name: quran_reader_reader
+  application_id: com.quran.universal
+  bundle_id: com.quran.universal
+  android_package_name: com.quran.universal
+#flutter pub run flutter_rename_app
