--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.5.2 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -25,26 +25,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^0.5.12+4
-  meta: ^1.1.8
+  shared_preferences: ^2.0.5
+  meta: ^1.3.0
+  path_provider: ^2.0.1
 
 #core
-  rxdart: 0.25.0
-  bloc: ^6.1.1
-  flutter_bloc: ^6.1.1
-  hydrated_bloc: ^6.1.0
-  equatable: ^1.2.5
+  rxdart: ^0.26.0
+  bloc: ^7.0.0-nullsafety.4
+  flutter_bloc: ^7.0.0-nullsafety.6
+  hydrated_bloc: ^7.0.0-nullsafety.4
+  equatable: ^2.0.0
 
-  wakelock: 0.2.1+1
-  sqflite: ^1.3.2+3
+  wakelock: ^0.5.0+2
+  sqflite: ^2.0.0+3
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.1
-  flutter_native_splash: ^0.1.9
-  flutter_rename_app: 1.0.0
+  flutter_launcher_icons: ^0.9.0
+  flutter_native_splash: ^1.1.2
+  #flutter_rename_app: 1.0.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -107,10 +108,10 @@ flutter_icons:
   ios: true
 #flutter pub run flutter_launcher_icons:main
 
-flutter_rename_app:
-  application_name: Quran Reader
-  dart_package_name: quran_reader_reader
-  application_id: com.quran.universal
-  bundle_id: com.quran.universal
-  android_package_name: com.quran.universal
+#flutter_rename_app:
+#  application_name: Quran Reader
+#  dart_package_name: quran_reader_reader
+#  application_id: com.quran.universal
+#  bundle_id: com.quran.universal
+#  android_package_name: com.quran.universal
 #flutter pub run flutter_rename_app
