--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   hydrated_bloc: ^7.0.0
   equatable: ^2.0.0
 
-  wakelock: ^0.5.0+2
+  #wakelock: ^0.5.0+2
   sqflite: ^2.0.0+3
   flutter_dotenv: 4.0.0-nullsafety.0
 
