--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,6 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.5
   meta: ^1.3.0
@@ -36,7 +34,7 @@ dependencies:
   hydrated_bloc: ^7.0.0
   equatable: ^2.0.0
 
-  #wakelock: ^0.5.0+2
+  wakelock: ^0.5.0+2
   sqflite: ^2.0.0+3
   flutter_dotenv: 4.0.0-nullsafety.0
 
