--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   hydrated_bloc: ^7.0.0
   equatable: ^2.0.0
   dartz: ^0.10.0-nullsafety.1
+  hive: ^2.0.0
+  hive_flutter: ^1.0.0
+  quiver: ^3.0.0
 
   wakelock: ^0.5.0+2
   sqflite: ^2.0.0+3
@@ -48,8 +51,8 @@ dev_dependencies:
   lint: ^1.5.2
   pedantic: 1.11.0
   logger:
-  monarch: ^0.2.0
-  build_runner: ^1.10.3
+  hive_generator:
+  build_runner:
 
 
 # For information on the generic Dart part of this file, see the
@@ -65,7 +68,6 @@ flutter:
   assets:
     - assets/images/quran/
     - assets/images/app/
-    - assets/quran-data/db/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
