--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   equatable: ^2.0.0
   dartz: ^0.10.0-nullsafety.1
   hive: ^2.0.0
+  flutter_screenutil: ^4.0.4+1
   hive_flutter: ^1.0.0
   quiver: ^3.0.0
 
   wakelock: ^0.5.0+2
   sqflite: ^2.0.0+3
   intl_utils: ^2.1.0
+  json_annotation:
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,7 @@ dev_dependencies:
   lint: ^1.5.2
   pedantic: 1.11.0
   logger:
+  json_serializable:
   hive_generator:
   build_runner:
 
