--- a/analysis_options.yml
+++ b/analysis_options.yml
@@ -39,6 +39,8 @@ analyzer:
     # see https://github.com/dart-lang/sdk/issues/28463
     - 'lib/i18n/stock_messages_*.dart'
     - 'lib/src/http/**'
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
 
 linter:
   rules:
