--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,19 +26,28 @@ dependencies:
   shared_preferences: ^2.0.5
   meta: ^1.3.0
   path_provider: ^2.0.1
+  app_settings: ^4.1.0
+  
 
-  #core
+
+  #Internet
+  dio: ^4.0.0
   http: ^0.13.1
+  connectivity: ^3.0.3
+
+  dartz: ^0.10.0-nullsafety.1
+
   rxdart: ^0.26.0
   bloc: ^7.0.0
   flutter_bloc: ^7.0.0
   hydrated_bloc: ^7.0.0
   equatable: ^2.0.0
-  dartz: ^0.10.0-nullsafety.1
-  hive: ^2.0.2
+
   flutter_screenutil: ^4.0.4+1
-  hive_flutter: ^1.0.0
   quiver: ^3.0.0
+
+  hive: ^2.0.2
+  hive_flutter: ^1.0.0
 
   wakelock: ^0.5.0+2
   sqflite: ^2.0.0+3
@@ -74,6 +83,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - .env
     - assets/images/quran/
     - assets/images/app/
 
