packages upgrade, localization formate change

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,6 +41,10 @@
 	<false/>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	  <key>CFBundleLocalizations</key>
+    	<array>
+    		<string>en</string>
+    	</array>
 
 </dict>
 </plist>
